Added readme and made some modifications

--- a/Landingpage/index.html
+++ b/Landingpage/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <p class="apologies">Apologies for submitting the wrong link, I learned late. View my code <a href="https://replit.com/@amateli/Portfolio-Website?v=1" target="_blank" rel="noopener noreferrer">here</a></p>
+    <p class="apologies">Apologies for submitting the wrong link, I learned late. View my code <a href="https://replit.com/@amateli/Landing-Page?v=1" target="_blank" rel="noopener noreferrer">here</a></p>
     <main class="container">
       <section class="container-heading">
         <p class="company">Welcome to <b>Alternate</b></p>
