--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -163,10 +163,10 @@
     <footer>
       <p class="copyright">Copyright &copy; 2022 amateli</p>
       <div class="footer-links">
-        <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-        <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-        <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <a href="https://web.facebook.com/profile.php?id=100010850041657" target="_blank" rel="noopener noreferrer"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/SamuleAteli" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/in/samuel-tamunoateli-91a949187/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
         <a href="https://github.com/amateli" target="_blank" rel="noopener noreferrer"><i class="fa fa-github" aria-hidden="true"></i></a>
         <a href="mailto:samueltamunoateli@gmail.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-google" aria-hidden="true"></i></a>
       </div>
